fixed dashboard's table view on mobile screen (on old branch).

--- a/script/css/admin.css
+++ b/script/css/admin.css
@@ -35,6 +35,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.sb-icon-arrows-in:before {
+  content: "\e90d";
+}
+
+.sb-icon-arrows-out:before {
+  content: "\e90b";
+}
+
+.sb-icon-sidebar:before {
+  content: "\e90c";
+}
+
 .sb-icon-arrow-up:before {
   content: "a";
   transform: rotate(180deg);
@@ -4692,7 +4704,6 @@ td.sb-offline:after {
   width: 100%;
   max-width: 100%;
   border-collapse: collapse;
-  table-layout: fixed;
 }
 .sb-table th {
   white-space: nowrap;
